tests/purs/failing/TypeError.purs
-- @shouldFailWith TypeConstructorsDoNotUnify
module Main where

import Prelude

test = 1 <> "A"
