tests/purs/failing/TypeError.out
Error found:
in module [33mMain[0m
at tests/purs/failing/TypeError.purs:6:13 - 6:16 (line 6, column 13 - line 6, column 16)

  The type
  [33m        [0m
  [33m  String[0m
  [33m        [0m
  does not match the expected type
  [33m     [0m
  [33m  Int[0m
  [33m     [0m

while checking that expression [33m"A"[0m
  has type [33mInt[0m
while applying a function [33m(append (#dict Semigroup t1)) 1[0m
  of type [33mt0 -> t0[0m
  to argument [33m"A"[0m
in value declaration [33mtest[0m

where [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

